# mysqlorm

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  add_lib.cpp  main.cpp
include/bb/: Collection.h  Console.h  Debug.h  Log.h  Ran.h  Str.h  Test.h  Time.h
include/mode/: dbA1_test.hpp
include/mysql_orm/mode/: dbA1_test.hpp
include/mysql_orm/sql/: Debug.h  ddl.h  dml.h  dml_type.h  dql.h  mode.h
include/mysqlorm/mode/: dbA1_test.hpp  dbA2_test.hpp
include/mysqlorm/sql/: ddl.h  dml.h  dml_type.h  dql.h  mode.h
include/sql/: DDL.h  DML.h  DQL.h  Debug.h  State.h  Type.h  dml.h  dml_type.h  dql.h
include/sql/mode/: dbA1_test.hpp
src/: ddl.cpp  dml.cpp  dml_type.cpp  dql.cpp
src/mode/: TA1_Test.cpp
