cmake_minimum_required(VERSION 3.16)
set(CMAKE_CXX_STANDARD 20)
project(test VERSION 3.0.1)

set(CMAKE_BUILD_TYPE Release)
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})

set(CMAKE_PREFIX_PATH ${CMAKE_SOURCE_DIR}/build/cmake/modules)
find_package(bb 4.0 REQUIRED NO_MODULE)
find_package(mysql REQUIRED NO_MODULE)
find_package(mysql_orm REQUIRED NO_MODULE)
include_directories(${bb_INCLUDES} ${mysql_INCLUDES} ${mysql_orm_INCLUDES} include)
add_executable(${PROJECT_NAME}_run main.cpp)
target_link_libraries(${PROJECT_NAME}_run -lpthread bb mysql_orm ${mysql_LIBS})